--- a/src/Resources_de.properties
+++ b/src/Resources_de.properties
@@ -1051,56 +1051,9 @@ persitencePlugin.load.error=Das Plugin zur Speicherung kann nicht geladen werden
 #A tip (in the welcome screen) that presents the Cloud functionnality
 Tip.10=<html>Greifen Sie von jedem beliebigen PC auf Ihre Daten zu.<hr style="width:40%">Im Speichern-Dialog erm\u00f6glicht Ihnen die Option <b>Dropbox</b>, Ihre Daten online in Ihrer Dropbox-Dateiverwaltung zu speichern und anschlie\u00dfend von jedem beliebigen PC mit Internet-Verbindung aus zu nutzen.<br><br>Dazu brauchen Sie nur einen Dropbox-Zugang, den Sie hier bekommen k\u00f6nnen: <a href="http://www.dropbox.com">http://www.dropbox.com</a></html>
 
-#Core JClop messages
-
-#Wordings related to the new file selection dialog
-com.fathzer.soft.jclop.URIChooserDialog.noFileSelected=Diese Schaltfl\u00e4che ist deaktiviert, weil keine Datei ausgew\u00e4hlt ist
-com.fathzer.soft.jclop.URIChooserDialog.openButton.title=\u00d6ffnen
-com.fathzer.soft.jclop.URIChooserDialog.saveButton.title=Speichern
-
-#Wordings related to computer's storage tab of the file selection dialog.
-com.fathzer.soft.jclop.FileChooserPanel.title=Computer
-com.fathzer.soft.jclop.FileChooserPanel.tooltip.save=W\u00e4hlen Sie diese Registerkarte, um Daten auf Ihrem lokalen Arbeitsplatz zu speichern
-com.fathzer.soft.jclop.FileChooserPanel.tooltip.open=W\u00e4hlen Sie diese Registerkarte, um Daten von Ihrem lokalen Arbeitsplatz zu lesen
-
-#Wordings related to data size units
-com.fathzer.soft.jclop.Generic.data.unit.bytes=Bytes
-com.fathzer.soft.jclop.Generic.data.unit.kBytes=KB
-com.fathzer.soft.jclop.Generic.data.unit.MBytes=MB
-com.fathzer.soft.jclop.Generic.data.unit.GBytes=GB
-
-com.fathzer.soft.jclop.Chooser.account=Konto: 
-#first argument is the available space, second is the unit
-com.fathzer.soft.jclop.Chooser.freeSpace={0}{1} verf\u00fcgbar
-com.fathzer.soft.jclop.Chooser.refresh=Aktualisierung
-com.fathzer.soft.jclop.Chooser.refresh.tooltip=Klicken Sie diesen Button, um die Verzeichnisliste entsprechend Ihres Dropbox-Inhalts zu aktualisieren
-com.fathzer.soft.jclop.Chooser.fileName=Datei: 
-
-#end of core JClop messages
-
-
-#Wordings related to the dropbox tab of the file selection dialog
-dropbox.Chooser.ConnectionDialog.title=Verbindung zu Dropbox
-dropbox.Chooser.ConnectionDialog.message.content=<html>Yapbam bekommt nur die Zugriffsberechtigung f\u00fcr ein bestimmtes Verzeichnis (/Applications/Yapbam), und nicht auf s\u00e4mtliche Daten Ihrer Dropbox.<br><br>Klicken Sie auf \"<b>{0}</b>\", wenn Yapbam mit Ihrer Dropbox verbunden werden soll (erfordert eine Internet-Verbindung und Ihre Registrierung bei Dropbox)<br>Anschlie\u00dfend \u00f6ffnet sich ein Browserfenster, wo Sie Yapbam den Zugriff auf Dropbox erlauben k\u00f6nnen.<br><br><b>Nach</b> dieser Autorisierung klicken Sie bitte auf "<b>{1}</b>"</html>
-dropbox.Chooser.ConnectionDialog.message.header=<html>Damit ihre Daten in <b>Dropbox</b> gespeichert werden k\u00f6nnen, ist eine Freigabe von Yapbam f\u00fcr Ihre Dropbox n\u00f6tig.</html>
-dropbox.Chooser.ConnectionDialog.startButton=Verbindung
-dropbox.Chooser.ConnectionDialog.startButton.tooltip=Klicken Sie diesen Button, um die Freigabe von Yapbam f\u00fcr Ihre Dropbox zu starten
-dropbox.Chooser.ConnectionDialog.accessNotGranted=Es scheint, als h\u00e4tten Sie Yapbam noch nicht f\u00fcr Ihre Dropbox freigegeben. Bitte versuchen Sie es erneut.
-dropbox.Chooser.ConnectionDialog.unexpectedError=Ein unerwarteter Fehler ist bei der Verbindung mit Dropbox aufgetreten.
-dropbox.Chooser.ConnectionDialog.error.processNotStarted=<html>Beginnen Sie, indem Sie den Button <b>{0}</b> anklicken</html>
-dropbox.Chooser.ConnectionDialog.error.unableToLaunchBrowser.message=Leider ist ein unerwarteter Fehler beim Starten des Web-Browsers aufgetreten.
-dropbox.Chooser.ConnectionDialog.error.unableToLaunchBrowser.title=Der Browser konnte nicht gestartet werden.
-
-dropbox.Chooser.read.tabTooltip=W\u00e4hlen Sie diese Registerkarte, um Daten aus Ihrer Dropbox zu laden
-dropbox.Chooser.save.tabTooltip=W\u00e4hlen Sie diese Registerkarte, um Daten in Ihrer Dropbox zu speichern
-dropbox.Chooser.connecting=Verbindung zu Dropbox ...
-dropbox.Chooser.error.connectionFailed=<html>Die Verbindung zu Dropbox ist fehlgeschlagen.<br>Es scheint keine Internet-Verbindung zu bestehen.</html>
-
 #Wordings related to the synchronization with Dropbox
 dropbox.conflict=Die Daten wurden sowohl auf Ihrem Computer als auch in Ihrem Dropbox-Verzeichnis ver\u00e4ndert
 dropbox.dropbox.remoteDeleted=Diese Datei existiert nicht mehr in Ihrer Dropbox.
-dropbox.downloading=Download von Dropbox ...
-dropbox.uploading=\u00dcbertragung zu Dropbox ...
 dropbox.download.action=Download der Daten von Dropbox zum Computer
 dropbox.upload.action=Upload der Daten vom Computer zu Dropbox
 
@@ -1141,3 +1094,68 @@ checkbookDialog.Edit.tooltip=Bearbeitet das ausgew\u00e4hlte Scheckbuch
 #Adds a test to prevent creating periodical transaction with next date after end date.
 PeriodicalTransactionDialog.error.nextDateAfterEnd=Der n\u00e4chste Termin ist nach dem Enddatum
 PeriodicalTransactionDialog.error.endDate=Das Enddatum ist ung\u00fcltig
+
+#Core JClop messages
+
+#Wordings related to the new file selection dialog
+com.fathzer.soft.jclop.URIChooserDialog.noFileSelected=Diese Schaltfl\u00e4che ist deaktiviert, weil keine Datei ausgew\u00e4hlt ist
+com.fathzer.soft.jclop.URIChooserDialog.openButton.title=\u00d6ffnen
+com.fathzer.soft.jclop.URIChooserDialog.saveButton.title=Speichern
+
+#Wordings related to computer's storage tab of the file selection dialog.
+com.fathzer.soft.jclop.FileChooserPanel.title=Computer
+com.fathzer.soft.jclop.FileChooserPanel.tooltip.save=W\u00e4hlen Sie diese Registerkarte, um Daten auf Ihrem lokalen Arbeitsplatz zu speichern
+com.fathzer.soft.jclop.FileChooserPanel.tooltip.open=W\u00e4hlen Sie diese Registerkarte, um Daten von Ihrem lokalen Arbeitsplatz zu lesen
+
+#Wordings related to data size units
+com.fathzer.soft.jclop.Generic.data.unit.bytes=Bytes
+com.fathzer.soft.jclop.Generic.data.unit.kBytes=KB
+com.fathzer.soft.jclop.Generic.data.unit.MBytes=MB
+com.fathzer.soft.jclop.Generic.data.unit.GBytes=GB
+
+com.fathzer.soft.jclop.Chooser.account=Konto: 
+#first argument is the available space, second is the unit
+com.fathzer.soft.jclop.Chooser.freeSpace={0}{1} verf\u00fcgbar
+com.fathzer.soft.jclop.Chooser.refresh=Aktualisierung
+com.fathzer.soft.jclop.Chooser.refresh.tooltip=Klicken Sie diesen Button, um die Verzeichnisliste entsprechend Ihres Dropbox-Inhalts zu aktualisieren
+com.fathzer.soft.jclop.Chooser.fileName=Datei: 
+
+#end of core JClop messages
+
+#Wordings related to the JClop dropbox service
+#Wordings related to the dropbox tab of the file selection dialog
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.title=Verbindung zu Dropbox
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.message.content=<html>Yapbam bekommt nur die Zugriffsberechtigung f\u00fcr ein bestimmtes Verzeichnis (/Applications/Yapbam), und nicht auf s\u00e4mtliche Daten Ihrer Dropbox.<br><br>Klicken Sie auf \"<b>{0}</b>\", wenn Yapbam mit Ihrer Dropbox verbunden werden soll (erfordert eine Internet-Verbindung und Ihre Registrierung bei Dropbox)<br>Anschlie\u00dfend \u00f6ffnet sich ein Browserfenster, wo Sie Yapbam den Zugriff auf Dropbox erlauben k\u00f6nnen.<br><br><b>Nach</b> dieser Autorisierung klicken Sie bitte auf "<b>{1}</b>"</html>
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.message.header=<html>Damit ihre Daten in <b>Dropbox</b> gespeichert werden k\u00f6nnen, ist eine Freigabe von Yapbam f\u00fcr Ihre Dropbox n\u00f6tig.</html>
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.startButton=Verbindung
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.startButton.tooltip=Klicken Sie diesen Button, um die Freigabe von Yapbam f\u00fcr Ihre Dropbox zu starten
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.accessNotGranted=Es scheint, als h\u00e4tten Sie Yapbam noch nicht f\u00fcr Ihre Dropbox freigegeben. Bitte versuchen Sie es erneut.
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.unexpectedError=Ein unerwarteter Fehler ist bei der Verbindung mit Dropbox aufgetreten.
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.error.processNotStarted=<html>Beginnen Sie, indem Sie den Button <b>{0}</b> anklicken</html>
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.error.unableToLaunchBrowser.message=Leider ist ein unerwarteter Fehler beim Starten des Web-Browsers aufgetreten.
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.error.unableToLaunchBrowser.title=Der Browser konnte nicht gestartet werden.
+
+com.fathzer.soft.jclop.dropbox.read.tabTooltip=W\u00e4hlen Sie diese Registerkarte, um Daten aus Ihrer Dropbox zu laden
+com.fathzer.soft.jclop.dropbox.save.tabTooltip=W\u00e4hlen Sie diese Registerkarte, um Daten in Ihrer Dropbox zu speichern
+
+com.fathzer.soft.jclop.dropbox.connecting=Verbindung zu Dropbox ...
+#dropbox.Chooser.error.connectionFailed=<html>Die Verbindung zu Dropbox ist fehlgeschlagen.<br>Es scheint keine Internet-Verbindung zu bestehen.</html>
+
+com.fathzer.soft.jclop.dropbox.downloading=Download von Dropbox ...
+com.fathzer.soft.jclop.dropbox.uploading=\u00dcbertragung zu Dropbox ...
+
+#End of dialog related to Dropbox service
+
+#-------------------------------------------------------
+# Added or modified since last translation
+
+com.fathzer.soft.jclop.GenericWait.title=Merci de patienter ...
+com.fathzer.soft.jclop.Error.title=Une erreur est survenue
+com.fathzer.soft.jclop.Error.unableToSerializeAccount=Désolé, impossible de sauvegarder les données de connexion du compte. Celles-ci seront oubliées lorsque vous quitterez Yapbam
+
+com.fathzer.soft.jclop.Chooser.new.tooltip=Crée un nouveau compte
+com.fathzer.soft.jclop.Chooser.delete=Supprimer
+com.fathzer.soft.jclop.Chooser.delete.tooltip=Supprime le compte sélectionné
+com.fathzer.soft.jclop.Chooser.delete.message.title=Supprimer le compte
+com.fathzer.soft.jclop.Chooser.delete.message=<html>Êtes-vous certain de vouloir supprimer ce compte ?<br><br>Cette action ne supprimera que la copie faite sur votre ordinateur, le compte sur le service de stockage ne sera pas supprimé.</html>
+
