--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -1023,9 +1023,6 @@ Generic.wait.writingTo=Ecriture vers {0} ...
 PreferencesDialog.StartState.rowOrder=Conserver l'ordre de tri des lignes
 PreferencesDialog.StartState.rowOrder.tooltip=Cochez cette case pour conserver l'ordre de tri des lignes dans les tableaux d'une exécution à l'autre
 
-#-------------------------------------------------------
-# Added or modified since last translation
-
 PreferencesDialog.Network.invalidProxyName=Un nom de serveur proxy ne peut contenir le caractère ':'
 
 #Correction of singular/plural spelling in periodical transactions table
@@ -1050,65 +1047,11 @@ persitencePlugin.load.error=Impossible de charger le plugin de persistence {0}.
 #A tip (in the welcome screen) that presents the Cloud functionnality
 Tip.10=<html>Accédez à vos données depuis n'importe quel ordinateur.<hr style="width:40%">Dans les boîtes de dialogue de sauvegarde/lecture des données, l'onglet <b>Dropbox</b> vous permet d'enregistrer/lire vos données sur votre compte Dropbox et d'y accéder ensuite depuis n'importe quel ordinateur relié à Internet.<br><br>Pour cela, il vous faudra juste un compte Dropbox disponible ici : <a href="http://www.dropbox.com">http://www.dropbox.com</a></html>
 
-#Core JClop messages
-
-#Wordings related to the new file selection dialog
-com.fathzer.soft.jclop.URIChooserDialog.noFileSelected=Ce bouton est inactif car aucun fichier n'est sélectionné
-com.fathzer.soft.jclop.URIChooserDialog.openButton.title=Ouvrir
-com.fathzer.soft.jclop.URIChooserDialog.saveButton.title=Enregistrer
-
-#Wordings related to computer's storage tab of the file selection dialog.
-com.fathzer.soft.jclop.FileChooserPanel.title=Ordinateur
-com.fathzer.soft.jclop.FileChooserPanel.tooltip.save=Selectionnez cet onglet pour sauver sur un support de stockage de votre ordinateur
-com.fathzer.soft.jclop.FileChooserPanel.tooltip.open=Selectionnez cet onglet pour lire à partir d'un support de stockage de votre ordinateur
-
-com.fathzer.soft.jclop.Chooser.account=Compte : 
-#first argument is the available space, second is the unit
-com.fathzer.soft.jclop.Chooser.freeSpace={0}{1} disponible
-com.fathzer.soft.jclop.Chooser.refresh=Mettre à jour
-com.fathzer.soft.jclop.Chooser.refresh.tooltip=Cliquer sur ce bouton pour mettre à jour la liste des fichiers par rapport au contenu de votre compte Dropbox
-com.fathzer.soft.jclop.Chooser.disconnect=Déconnecter
-com.fathzer.soft.jclop.Chooser.disconnect.tooltip=Cliquer ce bouton pour vous déconnecter du compte actuel et commencer le processus de connexion à un autre compte
-com.fathzer.soft.jclop.Chooser.fileName=Fichier : 
-
-#Wordings related to data size units
-com.fathzer.soft.jclop.Generic.data.unit.bytes=bits
-com.fathzer.soft.jclop.Generic.data.unit.kBytes=ko
-com.fathzer.soft.jclop.Generic.data.unit.MBytes=Mo
-com.fathzer.soft.jclop.Generic.data.unit.GBytes=Go
-
-#end of core JClop messages
-
-
-
-
-
-
-#Wordings related to the dropbox tab of the file selection dialog
-dropbox.Chooser.ConnectionDialog.title=Connexion à Dropbox
-dropbox.Chooser.ConnectionDialog.message.content=<html>Yapbam aura juste accès à un répertoire particulier (/Applications/Yapbam), et pas à l''intégralité de votre compte.<br><br>Cliquer le bouton \"<b>{0}</b>\" quand vous serez prêt à lier Yapbam et votre compte Dropbox (requiert une connexion Internet et un compte Dropbox).<br>Une fenêtre de navigateur Internet s''ouvrira alors, vous invitant à autoriser Yapbam à accéder à votre compte Dropbox.<br><br><b>Après</b> avoir autorisé cet accès, cliquer sur le bouton "<b>{1}</b>"</html>
-dropbox.Chooser.ConnectionDialog.message.header=<html>Stocker vos données sur <b>Dropbox</b> requiert que vous autorisiez Yapbam à accéder à votre compte Dropbox.</html>
-dropbox.Chooser.ConnectionDialog.startButton=Se connecter
-dropbox.Chooser.ConnectionDialog.startButton.tooltip=Cliquer sur ce bouton pour démarrer le processus d'autoriser d'accès par Yapbam à votre compte Dropbox
-dropbox.Chooser.ConnectionDialog.accessNotGranted=Il semble que vous n'ayez pas autorisé Yapbam à accéder à votre compte. Merci de réessayer.
-dropbox.Chooser.ConnectionDialog.unexpectedError=Une erreur inattendue est survenue lors de la connexion à Dropbox.
-dropbox.Chooser.ConnectionDialog.error.processNotStarted=<html>Vous devez commencer en cliquant sur le bouton <b>{0}</b></html>
-dropbox.Chooser.ConnectionDialog.error.unableToLaunchBrowser.message=Désolé, une erreur inattendue est survenue lors de l'ouverture du navigateur Internet.
-dropbox.Chooser.ConnectionDialog.error.unableToLaunchBrowser.title=Impossible d'ouvrir le navigateur.
-
-dropbox.Chooser.read.tabTooltip=Sélectionnez cet onglet pour lire les données à partir de votre compte Dropbox
-dropbox.Chooser.save.tabTooltip=Sélectionnez cet onglet pour sauver vos données dans votre compte Dropbox
-dropbox.Chooser.connecting=Connexion à Dropbox ...
-dropbox.Chooser.error.connectionFailed=<html>Impossible de se connecter à Dropbox.<br>Il semble que vous ne soyez pas connecté à Internet.</html>
-
 #Wordings related to the synchronization with Dropbox
 dropbox.conflict=Les données ont été modifiées à la fois sur votre ordinateur et sur votre compte Dropbox
 dropbox.dropbox.remoteDeleted=Ce fichier n'existe plus sur votre compte Dropbox.
-dropbox.downloading=Téléchargement à partir de Dropbox ...
-dropbox.uploading=Chargement vers Dropbox ...
 dropbox.download.action=Télécharger les données de Dropbox vers l'ordinateur
 dropbox.upload.action=Charger les données de l'ordinateur dans Dropbox
-
 
 #Wordings related to general synchronization process
 synchronization.synchronizing=Synchronisation ...
@@ -1147,3 +1090,75 @@ checkbookDialog.Edit.tooltip=Édite le chéquier sélectionné
 #Adds a test to prevent creating periodical transaction with next date after end date.
 PeriodicalTransactionDialog.error.nextDateAfterEnd=La prochaine date est postérieure à la date de fin
 PeriodicalTransactionDialog.error.endDate=La date de fin est incorrecte
+
+
+
+
+
+
+#Core JClop messages
+
+#Wordings related to the new file selection dialog
+com.fathzer.soft.jclop.URIChooserDialog.noFileSelected=Ce bouton est inactif car aucun fichier n'est sélectionné
+com.fathzer.soft.jclop.URIChooserDialog.openButton.title=Ouvrir
+com.fathzer.soft.jclop.URIChooserDialog.saveButton.title=Enregistrer
+
+#Wordings related to computer's storage tab of the file selection dialog.
+com.fathzer.soft.jclop.FileChooserPanel.title=Ordinateur
+com.fathzer.soft.jclop.FileChooserPanel.tooltip.save=Selectionnez cet onglet pour sauver sur un support de stockage de votre ordinateur
+com.fathzer.soft.jclop.FileChooserPanel.tooltip.open=Selectionnez cet onglet pour lire à partir d'un support de stockage de votre ordinateur
+
+com.fathzer.soft.jclop.Chooser.account=Compte : 
+#first argument is the available space, second is the unit
+com.fathzer.soft.jclop.Chooser.freeSpace={0}{1} disponible
+com.fathzer.soft.jclop.Chooser.refresh=Mettre à jour
+com.fathzer.soft.jclop.Chooser.refresh.tooltip=Cliquer sur ce bouton pour mettre à jour la liste des fichiers par rapport au contenu de votre compte Dropbox
+com.fathzer.soft.jclop.Chooser.fileName=Fichier : 
+
+#Wordings related to data size units
+com.fathzer.soft.jclop.Generic.data.unit.bytes=bits
+com.fathzer.soft.jclop.Generic.data.unit.kBytes=ko
+com.fathzer.soft.jclop.Generic.data.unit.MBytes=Mo
+com.fathzer.soft.jclop.Generic.data.unit.GBytes=Go
+
+#end of core JClop messages
+
+#Wordings related to the JClop dropbox service
+#Wordings related to the dropbox tab of the file selection dialog
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.title=Connexion à Dropbox
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.message.content=<html>Yapbam aura juste accès à un répertoire particulier (/Applications/Yapbam), et pas à l''intégralité de votre compte.<br><br>Cliquer le bouton \"<b>{0}</b>\" quand vous serez prêt à lier Yapbam et votre compte Dropbox (requiert une connexion Internet et un compte Dropbox).<br>Une fenêtre de navigateur Internet s''ouvrira alors, vous invitant à autoriser Yapbam à accéder à votre compte Dropbox.<br><br><b>Après</b> avoir autorisé cet accès, cliquer sur le bouton "<b>{1}</b>"</html>
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.message.header=<html>Stocker vos données sur <b>Dropbox</b> requiert que vous autorisiez Yapbam à accéder à votre compte Dropbox.</html>
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.startButton=Se connecter
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.startButton.tooltip=Cliquer sur ce bouton pour démarrer le processus d'autoriser d'accès par Yapbam à votre compte Dropbox
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.accessNotGranted=Il semble que vous n'ayez pas autorisé Yapbam à accéder à votre compte. Merci de réessayer.
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.unexpectedError=Une erreur inattendue est survenue lors de la connexion à Dropbox.
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.error.processNotStarted=<html>Vous devez commencer en cliquant sur le bouton <b>{0}</b></html>
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.error.unableToLaunchBrowser.message=Désolé, une erreur inattendue est survenue lors de l'ouverture du navigateur Internet.
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.error.unableToLaunchBrowser.title=Impossible d'ouvrir le navigateur.
+
+com.fathzer.soft.jclop.dropbox.read.tabTooltip=Sélectionnez cet onglet pour lire les données à partir de votre compte Dropbox
+com.fathzer.soft.jclop.dropbox.save.tabTooltip=Sélectionnez cet onglet pour sauver vos données dans votre compte Dropbox
+
+com.fathzer.soft.jclop.dropbox.connecting=Connexion à Dropbox ...
+#com.fathzer.soft.jclop.dropbox.error.connectionFailed=<html>Impossible de se connecter à Dropbox.<br>Il semble que vous ne soyez pas connecté à Internet.</html>
+
+#General wordings
+com.fathzer.soft.jclop.dropbox.downloading=Téléchargement à partir de Dropbox ...
+com.fathzer.soft.jclop.dropbox.uploading=Chargement vers Dropbox ...
+
+#End of dialog related to Dropbox service
+
+
+#-------------------------------------------------------
+# Added or modified since last translation
+
+com.fathzer.soft.jclop.GenericWait.title=Merci de patienter ...
+com.fathzer.soft.jclop.Error.title=Une erreur est survenue
+com.fathzer.soft.jclop.Error.unableToSerializeAccount=Désolé, impossible de sauvegarder les données de connexion du compte. Celles-ci seront oubliées lorsque vous quitterez Yapbam
+
+com.fathzer.soft.jclop.Chooser.new.tooltip=Crée un nouveau compte
+com.fathzer.soft.jclop.Chooser.delete=Supprimer
+com.fathzer.soft.jclop.Chooser.delete.tooltip=Supprime le compte sélectionné
+com.fathzer.soft.jclop.Chooser.delete.message.title=Supprimer le compte
+com.fathzer.soft.jclop.Chooser.delete.message=<html>Êtes-vous certain de vouloir supprimer ce compte ?<br><br>Cette action ne supprimera que la copie faite sur votre ordinateur, le compte sur le service de stockage ne sera pas supprimé.</html>
+
