--- a/src/Resources_pt.properties
+++ b/src/Resources_pt.properties
@@ -1060,58 +1060,10 @@ persitencePlugin.load.error=Unable to load the persistence plugin {0}.
 #A tip (in the welcome screen) that presents the Cloud functionnality
 Tip.10=<html>Access your data from any computer.<hr style="width:40%">In save dialog, the <b>Dropbox</b> tab allows you to save data to your Dropbox account and then access it from any computer connected to the Internet.<br><br>To do this, you will need just a Dropbox account available here: <a href="http://www.dropbox.com">http://www.dropbox.com</a></html>
 
-#Core JClop messages
-
-#Wordings related to the new file selection dialog
-com.fathzer.soft.jclop.URIChooserDialog.noFileSelected=Este botão está desabilitado porque nenhum arquivo for selecionado
-com.fathzer.soft.jclop.URIChooserDialog.openButton.title=Abrir
-com.fathzer.soft.jclop.URIChooserDialog.saveButton.title=Salvar
-
-#Wordings related to computer's storage tab of the file selection dialog.
-com.fathzer.soft.jclop.FileChooserPanel.title=Computador
-com.fathzer.soft.jclop.FileChooserPanel.tooltip.save=Selecione este guia para salvar dados para o armazenamento local
-com.fathzer.soft.jclop.FileChooserPanel.tooltip.open=Selecione esta guia para ler dados do seu local de armazenamento
-
-com.fathzer.soft.jclop.Chooser.account=Conta: 
-#first argument is the available space, second is the unit
-com.fathzer.soft.jclop.Chooser.freeSpace={0}{1} disponível
-com.fathzer.soft.jclop.Chooser.refresh=Refresh
-com.fathzer.soft.jclop.Chooser.refresh.tooltip=Clique neste botão para efetuar o refresh da lista de arquivos de acordo com o conteúdo do Dropbox
-com.fathzer.soft.jclop.Chooser.disconnect=Disconnecta
-com.fathzer.soft.jclop.Chooser.disconnect.tooltip=Clique neste botão para disconectar da conta atual e conectar à outra
-com.fathzer.soft.jclop.Chooser.fileName=Arquivo: 
-
-#Wordings related to data size units
-com.fathzer.soft.jclop.Generic.data.unit.bytes=bytes
-com.fathzer.soft.jclop.Generic.data.unit.kBytes=kB
-com.fathzer.soft.jclop.Generic.data.unit.MBytes=MB
-com.fathzer.soft.jclop.Generic.data.unit.GBytes=GB
-
-#end of core JClop messages
-
-
-#Wordings related to the dropbox tab of the file selection dialog
-dropbox.Chooser.ConnectionDialog.title=Conecta to Dropbox
-dropbox.Chooser.ConnectionDialog.message.content=<html>Yapbam somente tera acesso a arquivos específicos (/Aplicação/Yapbam), e não a sua conta completa.<br><br>Clique no \"<b>{0}</b>\" botão quando você estiver pronto para o link to Yapbam para a sua conta (precisa de uma conecção a Internet)<br>Depois, você sera redirecionado para uma tela do browser onde o Dropbox ira perguntar a você para permitir acesso ao Yapbam.<br><br><b>Depois</b> você deu permissão ao acesso para o Dropbox e clique no "<b>{1}</b>" botão</html>
-dropbox.Chooser.ConnectionDialog.message.header=<html>Armazenando dados para <b>Dropbox</b> requere que você autorize o Yapbam acesse sua conta no Dropbox.</html>
-dropbox.Chooser.ConnectionDialog.startButton=Inicia Conecção
-dropbox.Chooser.ConnectionDialog.startButton.tooltip=Clique neste botão para iniciar o processo de conecção.
-dropbox.Chooser.ConnectionDialog.accessNotGranted=Parece que você não autorizou o acesso ao Yapbam, por favor tente de novo.
-dropbox.Chooser.ConnectionDialog.unexpectedError=Um erro inesperado ocorreu enquanto conectando ao Dropbox.
-dropbox.Chooser.ConnectionDialog.error.processNotStarted=<html>Você poderia clicar no <b>{0}</b> botão primeiro.</html>
-dropbox.Chooser.ConnectionDialog.error.unableToLaunchBrowser.message=Desculpa, um erro inesperado ocorreu enquando estava carregando o browser.
-dropbox.Chooser.ConnectionDialog.error.unableToLaunchBrowser.title=Não foi possível carregar o browser
-
-dropbox.Chooser.read.tabTooltip=Selecione esta guia para ler dados na sua conta Dropbox
-dropbox.Chooser.save.tabTooltip=Selecione esta guia para salvar na sua conta Dropbox
-dropbox.Chooser.connecting=Conectando ao Dropbox...
-dropbox.Chooser.error.connectionFailed=<html>Não foi possível conectar ao Dropbox.<br>Parece que você não está conectado a Internet</html>
 
 #Wordings related to the synchronization with Dropbox 
 dropbox.conflict=Ambos dados armazenados no seu computador e no Dropbox foram modificados.
 dropbox.dropbox.remoteDeleted=Aquele arquivo não existe mais no Dropbox.
-dropbox.downloading=Baixando do Dropbox ...
-dropbox.uploading=Subindo para o Dropbox ...
 dropbox.download.action=Baixar dados do Dropbox para o computador
 dropbox.upload.action=Subir dados do computador para o Dropbox
 
@@ -1153,7 +1105,68 @@ checkbookDialog.Edit.tooltip=Edita o talão de cheques selecionado
 #Adds a test to prevent creating periodical transaction with next date after end date.
 PeriodicalTransactionDialog.error.nextDateAfterEnd=A próxima data é após a data final
 
+#Core JClop messages
+
+#Wordings related to the new file selection dialog
+com.fathzer.soft.jclop.URIChooserDialog.noFileSelected=Este botão está desabilitado porque nenhum arquivo for selecionado
+com.fathzer.soft.jclop.URIChooserDialog.openButton.title=Abrir
+com.fathzer.soft.jclop.URIChooserDialog.saveButton.title=Salvar
+
+#Wordings related to computer's storage tab of the file selection dialog.
+com.fathzer.soft.jclop.FileChooserPanel.title=Computador
+com.fathzer.soft.jclop.FileChooserPanel.tooltip.save=Selecione este guia para salvar dados para o armazenamento local
+com.fathzer.soft.jclop.FileChooserPanel.tooltip.open=Selecione esta guia para ler dados do seu local de armazenamento
+
+com.fathzer.soft.jclop.Chooser.account=Conta: 
+#first argument is the available space, second is the unit
+com.fathzer.soft.jclop.Chooser.freeSpace={0}{1} disponível
+com.fathzer.soft.jclop.Chooser.refresh=Refresh
+com.fathzer.soft.jclop.Chooser.refresh.tooltip=Clique neste botão para efetuar o refresh da lista de arquivos de acordo com o conteúdo do Dropbox
+com.fathzer.soft.jclop.Chooser.fileName=Arquivo: 
+
+#Wordings related to data size units
+com.fathzer.soft.jclop.Generic.data.unit.bytes=bytes
+com.fathzer.soft.jclop.Generic.data.unit.kBytes=kB
+com.fathzer.soft.jclop.Generic.data.unit.MBytes=MB
+com.fathzer.soft.jclop.Generic.data.unit.GBytes=GB
+
+#end of core JClop messages
+
+#Wordings related to the JClop dropbox service
+#Wordings related to the dropbox tab of the file selection dialog
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.title=Conecta to Dropbox
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.message.content=<html>Yapbam somente tera acesso a arquivos específicos (/Aplicação/Yapbam), e não a sua conta completa.<br><br>Clique no \"<b>{0}</b>\" botão quando você estiver pronto para o link to Yapbam para a sua conta (precisa de uma conecção a Internet)<br>Depois, você sera redirecionado para uma tela do browser onde o Dropbox ira perguntar a você para permitir acesso ao Yapbam.<br><br><b>Depois</b> você deu permissão ao acesso para o Dropbox e clique no "<b>{1}</b>" botão</html>
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.message.header=<html>Armazenando dados para <b>Dropbox</b> requere que você autorize o Yapbam acesse sua conta no Dropbox.</html>
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.startButton=Inicia Conecção
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.startButton.tooltip=Clique neste botão para iniciar o processo de conecção.
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.accessNotGranted=Parece que você não autorizou o acesso ao Yapbam, por favor tente de novo.
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.unexpectedError=Um erro inesperado ocorreu enquanto conectando ao Dropbox.
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.error.processNotStarted=<html>Você poderia clicar no <b>{0}</b> botão primeiro.</html>
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.error.unableToLaunchBrowser.message=Desculpa, um erro inesperado ocorreu enquando estava carregando o browser.
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.error.unableToLaunchBrowser.title=Não foi possível carregar o browser
+
+com.fathzer.soft.jclop.dropbox.read.tabTooltip=Selecione esta guia para ler dados na sua conta Dropbox
+com.fathzer.soft.jclop.dropbox.save.tabTooltip=Selecione esta guia para salvar na sua conta Dropbox
+
+com.fathzer.soft.jclop.dropbox.connecting=Conectando ao Dropbox...
+#com.fathzer.soft.jclop.dropbox.error.connectionFailed=<html>Não foi possível conectar ao Dropbox.<br>Parece que você não está conectado a Internet</html>
+
+com.fathzer.soft.jclop.dropbox.downloading=Baixando do Dropbox ...
+com.fathzer.soft.jclop.dropbox.uploading=Subindo para o Dropbox ...
+
+#End of dialog related to Dropbox service
+
 #-------------------------------------------------------
 # Added or modified since last translation
+
+com.fathzer.soft.jclop.GenericWait.title=Please wait ...
+com.fathzer.soft.jclop.Error.title=An error occurred
+com.fathzer.soft.jclop.Error.unableToSerializeAccount=Sorry, the login data can't be saved. It will be forget when you will close Yapbam
+
+com.fathzer.soft.jclop.Chooser.new.tooltip=Creates a new account
+com.fathzer.soft.jclop.Chooser.delete=Delete
+com.fathzer.soft.jclop.Chooser.delete.tooltip=Deletes the local data about the selected account
+com.fathzer.soft.jclop.Chooser.delete.message.title=Delete account
+com.fathzer.soft.jclop.Chooser.delete.message=<html>Are you sure you want to delete this account?<br><br>It will only delete the copy made on your computer, not the remote account.</html>
 
 PeriodicalTransactionDialog.error.endDate=A data final é inválido
