--- a/src/net/yapbam/gui/tools/messages.properties
+++ b/src/net/yapbam/gui/tools/messages.properties
@@ -1,21 +1,23 @@
+#Eclipse messages class
+#Sat Feb 02 17:37:33 CET 2013
+CurrencyConverterPanel.CodeColumnName=Code
+CurrencyConverterPanel.CurrencyColumnName=Currency
+CurrencyConverterPanel.CurrencyToColumnName=1 currency \= ? {0}
+CurrencyConverterPanel.ToCurrencyColumnName=1 {0} \= ? currency
 CurrencyConverterPanel.amount.toolTip=Enter the amount to convert and press the <Tab> key
 CurrencyConverterPanel.destination.toolTip=Select the target currency 
 CurrencyConverterPanel.errorMessage=Error "{0}" occurred.
 CurrencyConverterPanel.origin.toolTip=Select the source currency here
 CurrencyConverterPanel.result.toolTip=Displays the converted amounts
-CurrencyConverterPanel.topMessage=The conversion rates are according to the rates of European Central Bank on: {0,date,long}
+CurrencyConverterPanel.topMessage=The conversion rates are according to the rates of European Central Bank on\: {0,date,long}
+ToolsPlugIn.calculator.title=Calculator
+ToolsPlugIn.calculator.toolTip=Abre uma calculadora
 ToolsPlugIn.currencyConverter.title=Currency converter
 ToolsPlugIn.currencyConverter.toolTip=Opens the currency converter
 ToolsPlugIn.menu.title=Tools
 ToolsPlugIn.menu.toolTip=Allows access to Yapbam's utilities
-CurrencyConverterPanel.CodeColumnName=Code
-CurrencyConverterPanel.CurrencyColumnName=Currency
-CurrencyConverterPanel.CurrencyToColumnName=1 currency = ? {0}
-CurrencyConverterPanel.ToCurrencyColumnName=1 {0} = ? currency
-
 ToolsPlugin.currencyConverter.ioErrorMessage=<html>An error occurred while communicating with the European Central Bank.<br>Make sure your Internet connection is working.</html>
 ToolsPlugin.currencyConverter.wait.message=<html>Download of currency from the European Central Bank.<br>Thank you for your patience.</html>
 
-#Adds a calculator in the tools menu
-ToolsPlugIn.calculator.title=Calculator
-ToolsPlugIn.calculator.toolTip=Abre uma calculadora
+#Changed or modified since last translation
+CurrencyConverterPanel.swapButton.toolTipText=Swaps the currencies
