--- a/src/net/yapbam/gui/tools/messages_fr.properties
+++ b/src/net/yapbam/gui/tools/messages_fr.properties
@@ -18,3 +18,5 @@ CurrencyConverterPanel.ToCurrencyColumnName=1 {0} = ? devises
 #Adds a calculator in the tools menu
 ToolsPlugIn.calculator.title=Calculatrice
 ToolsPlugIn.calculator.toolTip=Affiche la calculatrice
+
+CurrencyConverterPanel.swapButton.toolTipText=Intervertit les devises
