--- a/src/localization/fr/relnotes.txt
+++ b/src/localization/fr/relnotes.txt
@@ -8,7 +8,8 @@ improvement
 
 version	0.14.1 (??/02/2013)
 improvement
-	Ajout d'un bouton permettant de permuter les devises dans le convertisseur de devises. 
+	Ajout d'un bouton permettant de permuter les devises dans le convertisseur de devises.
+	Dans la calculatrice, le résultat est à présent sélectionnable et peut être copié avec le raccourci standard (<ctrl-C> sous Windows).
 fix
 	Taper une virgule comme premier caractère d'un champ de saisi de montant provoquait une erreur. 
 
