--- a/Yapbam/src/localization/relnotes.txt
+++ b/Yapbam/src/localization/relnotes.txt
@@ -9,6 +9,7 @@ improvement
 version	0.14.1 (02/??/2013)
 improvement
 	Adds a button to swap the currencies in the currency converter.
+	In the calculator, the result is now selectable and can be copied with the standard shortcut (Windows <CTRL-C>).
 fix
 	Type a comma as the first character of an amount input field caused an error.
 
