--- a/src/localization/fr/relnotes.txt
+++ b/src/localization/fr/relnotes.txt
@@ -6,6 +6,10 @@ known
 improvement
 	Yapbam peut être connecté à un compte Dropbox de manière à partager vos données entre plusieurs ordinateurs via Internet, et bénéficier des fonctions de sauvegarde de Dropbox.
 
+version	0.14.2 (??/02/2013)
+fix
+	Contournement d'un bug de Java qui provoquait une erreur avec Java 1.7.03 lors de l'ouverture du dialogue de création d'opération périodique.
+
 version	0.14.1 (03/02/2013)
 improvement
 	Ajout d'un bouton permettant de permuter les devises dans le convertisseur de devises.
